fixed typos and dead links

--- a/communicatingmath.qmd
+++ b/communicatingmath.qmd
@@ -17,7 +17,7 @@ In addition to continually trying to improve my own exposition, I have also deve
     A Notices article laying out the philosophy of mathematical storytelling and how to carry it out in practice.
 * [Worksheets](https://docs.google.com/document/d/1XMBzJgaEU3VGwa9dRO0Xu0V8WmSGWmunTmpyqz_43Kg/edit?usp=sharing) for gaining practice using mathematical storytelling:
     + ***7 elements of storytelling*** A worksheet working through translating the elements of storytelling to a mathematical perspective.
-    + ***Storyboarding*** A worksheet with a step-by-step method to develop a storyboard. (See also [slides]() with some examples)
+    + ***Storyboarding*** A worksheet with a step-by-step method to develop a storyboard. (See also [slides](https://drive.google.com/file/d/1UZlifnolhbSZ3kqXmEn_VsPCh4LjvXuf/view?usp=sharing) with some examples)
     + ***Talk plan self-assessment*** A checklist self-assessment to see if your talk is hitting the key narrative elements. 
     + ***Peer feedback form*** A worksheet giving structure for feedback from a practice talk.
 * [Practical tips for giving and preparing a talk](resources/talktips.qmd) (This should be looked at *after* you have developed a compelling storyboard.)
