--- a/index.qmd
+++ b/index.qmd
@@ -2,7 +2,7 @@
 title: "Bio"
 --- -->
 
-I am an arithmetic geometer broadly interested in rational and algebraic points on varieties. Overviews of different aspects of my research program and links to talks can be found on my [Research](research.qmd) page. Complete lists of my preprints and publications can be found on my [arXiv](https://arxiv.org/a/viray_b_1.html) page and on my [MathSciNet author page](https://mathscinet.ams.org/mathscinet/MRAuthorID/890397) (subscription required). My research has been supported by National Science Foundation grants (through the [CAREER](https://www.nsf.gov/funding/opportunities/career-faculty-early-career-development-program) and [Algebra and Number Theory](https://www.nsf.gov/funding/opportunities/algebra-number-theory) programs), a Simons Fellowship, and the AMS Joan and Joseph Birman Fellowshop. I am grateful to these organizations for their support.
+I am an arithmetic geometer broadly interested in rational and algebraic points on varieties. Overviews of different aspects of my research program and links to talks can be found on my [Research](research.qmd) page. Complete lists of my preprints and publications can be found on my [arXiv](https://arxiv.org/a/viray_b_1.html) page and on my [MathSciNet author page](https://mathscinet.ams.org/mathscinet/MRAuthorID/890397) (subscription required). My research has been supported by National Science Foundation grants (through the [CAREER](https://www.nsf.gov/funding/opportunities/career-faculty-early-career-development-program) and [Algebra and Number Theory](https://www.nsf.gov/funding/opportunities/algebra-number-theory) programs), a Simons Fellowship, and the AMS Joan and Joseph Birman Fellowship. I am grateful to these organizations for their support.
 
 
 I [firmly believe](https://www.simonsfoundation.org/2022/01/21/mathematician-bianca-viray-invites-everyone-to-the-table/) that a collaborative and supportive research environment stimulates excellent research. To prove radically new theorems, one has to deeply and strongly believe in one's own ideas, and that is easiest when one is surrounded by a supportive community. Conversely, biased expectations and harassment suffocate one's creativity and ability to think (not to mention being downright distressing). In my roles as organizer, advisor, mentor, teacher, and collaborator, I strive to create collaborative and supportive spaces, and am receptive to [feedback](https://forms.gle/S2F2vmyYZTiat5757) on ways to improve. Additionally, if someone has or is experiencing harassment, and would like to talk, please reach out to me. (<small>*Note*: at the University of Washington, I am a mandatory reporter, which means I must report any possible discrimination, harassment, or sexual misconduct involving a UW student, but I do not have to report the student's name. See [here](https://uw-s3-cdn.s3.us-west-2.amazonaws.com/wp-content/uploads/sites/245/2025/10/24110432/Employee-Reporting-Obligations-Quick-Reference-Guide.pdf) for more details.</small>)
