--- a/bvirayCV.tex
+++ b/bvirayCV.tex
@@ -6,6 +6,7 @@
 
 \documentclass[12pt]{article}
 \usepackage{graphicx,url}
+\usepackage{amsmath, amssymb, amsthm}
 \usepackage{enumitem}
 \usepackage[T1]{fontenc} % needed to allow bold smallcaps
 
@@ -314,8 +315,9 @@
 		\begin{date_section}
 			\yearmo{}{2026} Fourth Journal of Number Theory Biennial Conference, Cetraro, Italy
 			\yearmo{}{} The Ninth Mini Symposium of the Roman Number Theory Association
+			\yearmo{}{} \(\mathbb{N}\)-Cube Days XXIV, University of Copenhagen
+			\yearmo{}{} Joint Mathematics Meetings, AMS special session on Communicating Mathematics
 			\yearmo{}{2025} Algebraic points on curves, ICERM
-
 			\yearmo{}{2024}
 			Joint Meeting of the NZMS, AustMS and AMS, special session on Arithmetic Geometry and Number Theory 
 			\yearmo{}{}
