--- a/bvirayCV.tex
+++ b/bvirayCV.tex
@@ -236,6 +236,7 @@
             Roots of Unity workshop series (held biannually)\\
             Co-organizers: Christine Berkesch, Michelle Manes, Priyam Patel,  Candice Price
 			\yearmo{}{}\textbf{\textsc{Program/Scientific Committee}}
+			\yearmo{}{2027} Canadian Number Theory Association XVII, Scientific Organizing Committee
             \yearrange{2022}{} Rational Points Conference
 			\yearmo{}{}\textbf{\textsc{Service to the community}}
 			\yearrange{2025}{} Co-organizer, Current Events Bulletin at the Joint Mathematics Meetings
